--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="git.rrigby.kinolog"
+    package="com.alcidauk.cinelog"
     android:versionCode="12"
-    android:versionName="1.2">
+    android:versionName="0.1">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -32,7 +32,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="git.rrigby.kinolog.MainActivity" />
+                android:value=".MainActivity" />
         </activity>
         <activity
             android:name=".ViewKino"
