[CineLog] prepare dev of export functionnality
  - create an export activity
  - add button in settings to make export
  - start dev of some classes (the initial goal was to use opencsv lib, but it is not android compatible)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,7 @@ dependencies {
     compile 'org.greenrobot:greendao:3.2.2'
     // https://mvnrepository.com/artifact/com.uwetrottmann.tmdb2/tmdb-java
     compile 'com.uwetrottmann.tmdb2:tmdb-java:1.6.0'
+
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.13.0'
 }
