[CineLog] implements a first version of a CSV export thanks to commons CSV apache lib   => for now, just export some fields of a movie, and write it as a string to the standard output

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     // https://mvnrepository.com/artifact/com.uwetrottmann.tmdb2/tmdb-java
     compile 'com.uwetrottmann.tmdb2:tmdb-java:1.6.0'
 
+    compile 'org.apache.commons:commons-csv:1.5'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.13.0'
 }
