--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
 
     compile 'org.apache.commons:commons-csv:1.5'
 
+    compile 'com.android.support:preference-v7:25.3.1'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.13.0'
 }
