[Cinelog] start implementation of serie support (WORK IN PROGRESS)
  - create an AddReviewActivity above AddKino and AddSerieActivity
  - create an abstract ListFragment above Movie and Serie fragments
  - create an interface DataService above KinoService
  - modify NetworkTasks to get AddReviewActivities
  - start implementation of SerieFragment and AddSerieActivity
    => now able to search for series

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,8 +46,17 @@
         </activity>
         <activity android:name=".android.activities.Search" />
         <activity
-            android:name=".android.activities.AddKino"
+            android:name=".android.activities.add.AddKino"
             android:label="@string/title_activity_add_kino"
+            android:parentActivityName=".android.activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".android.activities.MainActivity" />
+        </activity>
+        <activity
+            android:name=".android.activities.add.AddSerieActivity"
+            android:label="@string/title_activity_add_serie"
             android:parentActivityName=".android.activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
