--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
  along with CineLog. If not, see <https://www.gnu.org/licenses/>.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ulicae.cinelog"
     android:versionCode="16"
     android:versionName="1.0.1">
@@ -33,11 +34,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".android.activities.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,8 +49,7 @@
         <activity
             android:name=".android.activities.add.AddKino"
             android:label="@string/title_activity_add_kino"
-            android:parentActivityName=".android.activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".android.activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".android.activities.MainActivity" />
@@ -57,29 +57,24 @@
         <activity
             android:name=".android.activities.add.AddSerieActivity"
             android:label="@string/title_activity_add_serie"
-            android:parentActivityName=".android.activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".android.activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".android.activities.MainActivity" />
         </activity>
         <activity
             android:name=".android.activities.ViewKino"
-            android:label="@string/title_activity_view_kino"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_view_kino"/>
         <activity
             android:name=".android.activities.ViewUnregisteredKino"
-            android:label="@string/title_activity_view_unregistered_kino"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_view_unregistered_kino"/>
         <activity
             android:name=".android.activities.EditReview"
-            android:label="@string/title_activity_add_review"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:label="@string/title_activity_add_review"/>
         <activity
             android:name=".io.exportdb.ExportDb"
             android:label="@string/title_activity_export_db"
-            android:parentActivityName=".android.activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".android.activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".android.activities.MainActivity" />
@@ -87,8 +82,7 @@
         <activity
             android:name=".io.importdb.ImportInDb"
             android:label="@string/title_activity_import_db"
-            android:parentActivityName=".android.activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".android.activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".android.activities.MainActivity" />
@@ -96,7 +90,8 @@
         <activity
             android:name=".android.settings.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".android.activities.MainActivity">
+            android:parentActivityName=".android.activities.MainActivity"
+            android:theme="@style/PrefsTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".android.activities.MainActivity" />
