--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
         </activity>
         <activity
             android:name=".android.activities.WishlistActivity"
-            android:label="@string/wishlist_list_activity">
+            android:label="@string/app_name">
         </activity>
         <activity android:name=".android.activities.Search" />
         <activity
