--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,8 +96,7 @@
         <activity
             android:name=".android.settings.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".android.activities.MainActivity"
-            android:theme="@style/PrefsTheme">
+            android:parentActivityName=".android.activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".android.activities.MainActivity" />
