--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
 
+
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+
+    compileSdkVersion 29
     defaultConfig {
         applicationId 'com.ulicae.cinelog'
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 29
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -37,35 +38,37 @@ greendao {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.android.support:design:25.3.1'
+    implementation 'com.android.support:cardview-v7:25.3.1'
+
     // Scrolling image loader
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     // Switch icons
-    compile 'com.github.zagum:Android-SwitchIcon:1.3.4'
+    implementation 'com.github.zagum:Android-SwitchIcon:1.3.4'
     // ButterKnife removes needless findViewById calls
-    compile 'com.jakewharton:butterknife:8.5.1'
+    implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     // Makes parceling simple
-    compile 'org.parceler:parceler-api:1.1.8'
+    implementation 'org.parceler:parceler-api:1.1.8'
     annotationProcessor 'org.parceler:parceler:1.1.8'
     // GreenDAO ORM for database
-    compile 'org.greenrobot:greendao:3.2.2'
+    implementation 'org.greenrobot:greendao:3.2.2'
     // https://mvnrepository.com/artifact/com.uwetrottmann.tmdb2/tmdb-java
-    compile 'com.uwetrottmann.tmdb2:tmdb-java:1.10.1'
+    implementation 'com.uwetrottmann.tmdb2:tmdb-java:1.10.1'
     // Add import and export functionnalities
-    compile 'org.apache.commons:commons-csv:1.5'
-    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    implementation 'org.apache.commons:commons-csv:1.5'
+    implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 
     // Allow to implements app preferences
-    compile 'com.android.support:preference-v7:25.3.1'
+    implementation 'com.android.support:preference-v7:25.3.1'
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.13.0'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version: '2.0.0.0'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.13.0'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest-junit', version: '2.0.0.0'
 }
