--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,9 @@
             android:name=".android.activities.ViewKino"
             android:label="@string/title_activity_view_kino"/>
         <activity
+            android:name=".android.activities.ViewSerie"
+            android:label="@string/title_activity_view_serie"/>
+        <activity
             android:name=".android.activities.ViewUnregisteredKino"
             android:label="@string/title_activity_view_unregistered_kino"/>
         <activity
