--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,12 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    // TODO migrate
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:25.3.1'
+    //noinspection GradleCompatible
     implementation 'com.android.support:design:25.3.1'
+    //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:25.3.1'
 
     // Scrolling image loader
@@ -71,6 +75,8 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 
     // Allow to implements app preferences
+    // TODO migrate
+    //noinspection GradleCompatible
     implementation 'com.android.support:preference-v7:25.3.1'
 
     testImplementation 'junit:junit:4.12'
