--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
             android:name=".android.activities.WishlistActivity"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name=".android.activities.TagsActivity"
+            android:label="@string/app_name">
+        </activity>
         <activity android:name=".android.activities.Search" />
         <activity
             android:name=".android.activities.add.AddKino"
@@ -61,6 +65,14 @@
         <activity
             android:name=".android.activities.add.AddSerieActivity"
             android:label="@string/title_activity_add_serie"
+            android:parentActivityName=".android.activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".android.activities.MainActivity" />
+        </activity>
+        <activity
+            android:name=".android.activities.add.AddTag"
+            android:label="@string/tags_title"
             android:parentActivityName=".android.activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
