--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         applicationId 'com.ulicae.cinelog'
         minSdkVersion 19
         targetSdkVersion 29
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -38,27 +38,29 @@ greendao {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     // TODO migrate
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     //noinspection GradleCompatible
-    implementation 'com.android.support:design:25.3.1'
+    implementation 'com.google.android.material:material:1.0.0'
     //noinspection GradleCompatible
-    implementation 'com.android.support:cardview-v7:25.3.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     // Scrolling image loader
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     // Switch icons
     implementation 'com.github.zagum:Android-SwitchIcon:1.3.4'
     // ButterKnife removes needless findViewById calls
-    implementation 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+
     // Makes parceling simple
-    implementation 'org.parceler:parceler-api:1.1.8'
-    annotationProcessor 'org.parceler:parceler:1.1.8'
+    implementation 'org.parceler:parceler-api:1.1.13'
+    annotationProcessor 'org.parceler:parceler:1.1.13'
+
     // GreenDAO ORM for database
     implementation 'org.greenrobot:greendao:3.2.2'
     // https://mvnrepository.com/artifact/com.uwetrottmann.tmdb2/tmdb-java
@@ -70,7 +72,7 @@ dependencies {
     // Allow to implements app preferences
     // TODO migrate
     //noinspection GradleCompatible
-    implementation 'com.android.support:preference-v7:25.3.1'
+    implementation 'androidx.preference:preference:1.0.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.13.0'
