--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,9 @@ dependencies {
     implementation 'org.apache.commons:commons-csv:1.5'
     implementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
 
+    // color picker for tags
+    implementation "com.github.skydoves:colorpickerview:2.2.4"
+
     // Allow to implements app preferences
     implementation 'androidx.preference:preference:1.2.0'
 
