--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,6 +114,7 @@
         <activity
             android:name=".android.settings.SettingsActivity"
             android:label="@string/title_activity_settings"
+            android:theme="@style/DarkPreferencesTheme"
             android:parentActivityName=".android.activities.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
