--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ android {
         targetCompatibility 1.8
     }
 
-    compileSdkVersion 32
+    compileSdk 34
     defaultConfig {
         applicationId 'com.ulicae.cinelog'
         minSdkVersion 24
-        targetSdkVersion 32
+        targetSdkVersion 34
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
         multiDexEnabled true
@@ -43,7 +43,7 @@ greendao {
 }
 
 dependencies {
-    def nav_version = "2.5.2"
+    def nav_version = "2.7.6"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
@@ -51,15 +51,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     // Scrolling image loader
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
     // Switch icons
-    implementation 'com.github.zagum:Android-SwitchIcon:1.3.4'
+    implementation 'com.github.zagum:Android-SwitchIcon:1.4.2'
 
     // Makes parceling simple
     implementation 'org.parceler:parceler-api:1.1.13'
@@ -77,13 +77,13 @@ dependencies {
     implementation "com.github.skydoves:colorpickerview:2.2.4"
 
     // Allow to implements app preferences
-    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.preference:preference:1.2.1'
 
     // navigation lib
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:2.28.2'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-junit', version: '2.0.0.0'
 }
