--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ android {
         targetCompatibility 1.8
     }
 
-    compileSdkVersion 32
+    compileSdkVersion 33
     defaultConfig {
         applicationId 'com.ulicae.cinelog'
         minSdkVersion 24
-        targetSdkVersion 32
+        targetSdkVersion 33
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
         multiDexEnabled true
@@ -51,6 +51,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    // see https://stackoverflow.com/questions/75263047/duplicate-class-in-kotlin-android
+    constraints {
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+        }
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        }
+    }
+
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -59,7 +69,7 @@ dependencies {
     // Scrolling image loader
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     // Switch icons
-    implementation 'com.github.zagum:Android-SwitchIcon:1.3.4'
+    implementation 'com.github.zagum:Android-SwitchIcon:1.4.2'
 
     // Makes parceling simple
     implementation 'org.parceler:parceler-api:1.1.13'
