--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         targetCompatibility 1.8
     }
 
-    compileSdkVersion 33
+    compileSdkVersion 34
     defaultConfig {
         applicationId 'com.ulicae.cinelog'
         minSdkVersion 24
@@ -79,16 +79,19 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
 
     // Room will replace greendao, because of a lack in code publication
-    def room_version = "2.2.0"
+    def room_version = "2.6.1"
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
-
     // optional - RxJava2 support for Room
-    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "androidx.room:room-rxjava3:$room_version"
 
-    implementation "io.reactivex.rxjava3:rxjava:3.1.8"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    // Because RxAndroid releases are few and far between, it is recommended you also
+    // explicitly depend on RxJava's latest version for bug fixes and new features.
+    // (see https://github.com/ReactiveX/RxJava/releases for latest 3.x.x version)
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
 
     // https://mvnrepository.com/artifact/com.uwetrottmann.tmdb2/tmdb-java
     implementation 'com.uwetrottmann.tmdb2:tmdb-java:2.2.0'
